<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hw_basic">Basic</string>
    <string name="hw_browser">Browser</string>
    <string name="hw_handwriting">Handwriting controller</string>
    <string name="hw_mediaplayer">Media player</string>
    <string name="hw_presentation">Presentation</string>
    <string name="scan_connected_to">Connected to:</string>
    <string name="scan_failed_connected">Failed to connect:</string>
    <string name="scan_invalid_ip">Invalid IP address</string>
    <string name="scan_manually_ip">Enter IP Address</string>
    <string name="scan_scanning">Scanning ...</string>
    <string name="setting_FAQ">FAQ</string>
    <string name="setting_General">General</string>
    <string name="setting_bonus">Get Bonus</string>
    <string name="setting_buy_pro">Buy Pro version</string>
    <string name="setting_connected_after">Show touchpad after connected</string>
    <string name="setting_connection_detect">Detect disconnection</string>
    <string name="setting_invite_Download">Download</string>
    <string name="setting_invite_friends">Invite friends</string>
    <string name="setting_invite_subject">Recommend WiFi Mouse</string>
    <string name="setting_join_beta">Join beta testing group</string>
    <string name="setting_like_facebook">Like us on Facebook</string>
    <string name="setting_message">Message</string>
    <string name="setting_mouse_left_handed">Left handed mouse</string>
    <string name="setting_mouse_sensitivity">Mouse sensitivity</string>
    <string name="setting_name">Settings</string>
    <string name="setting_removeads">Remove Ads</string>
    <string name="setting_restore_features">Restore features</string>
    <string name="setting_restore_ok">Restore completely</string>
    <string name="setting_scroll_direction">Nature scroll direction</string>
    <string name="setting_scroll_sensitivity">Scroll sensitivity</string>
    <string name="setting_setup">Setup</string>
    <string name="setup_start">Start</string>
    <string name="setup_step1">Download mouse server from http://wifimouse.necta.us</string>
    <string name="setup_step2">Install mouse server and run it as administrtor</string>
    <string name="setup_step3">Make sure your PC/Mac/Linux and your phone at the same network</string>
    <string name="setup_step4">Make sure your firewall allow TCP port 1978 which is used by mouse server</string>
    <string name="setup_step5">Any question please refer to FAQ</string>
    <string name="splash_copyright">Copyright© 2016 Necta company</string>
    <string name="touchpad_gesture_1">1. Tap for click</string>
    <string name="touchpad_gesture_2">2. Move cursor</string>
    <string name="touchpad_gesture_3">3. Press and move for drag and drop</string>
    <string name="touchpad_gesture_4">4. Two fingers to make scroll</string>
    <string name="touchpad_gesture_5">5. Two fingers tap for right click</string>
    <string name="touchpad_gesture_6">6. Three fingers move for drag and drop</string>
    <string name="touchpad_start">Start</string>
    <string name="web_add_cancel">Cancel</string>
    <string name="web_add_name">Name</string>
    <string name="web_add_ok">OK</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="accept">Accept</string>
    <string name="app_name">WiFi Mouse HD free</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="facebookid">1269136889793253</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
