<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff1c2937" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="3.0dip">
                <ImageView android:layout_gravity="center" android:id="@id/iv_general_back" android:background="@mipmap/ic_settings_back" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" />
                <TextView android:textSize="22.0sp" android:textColor="#ffa6abb2" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_General" />
            </LinearLayout>
            <View android:background="@mipmap/top_fragment_bg" android:layout_width="fill_parent" android:layout_height="3.0dip" />
            <LinearLayout android:orientation="horizontal" android:id="@id/rl_mouse_sensitivity" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_mouse_sensitivity" android:layout_weight="1.0" />
                <SeekBar android:layout_gravity="center" android:id="@id/sb_mouse" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/Widget.SeekBar.Normal" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" android:id="@id/rl_scroll_sensitivity" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/setting_scroll_sensitivity" android:layout_weight="1.0" />
                <SeekBar android:layout_gravity="center" android:id="@id/sb_scroll" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/Widget.SeekBar.Normal" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" android:id="@id/rl_showtouchpad" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="20.0dip" android:text="@string/setting_connected_after" android:layout_weight="1.0" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <CheckBox android:gravity="center" android:layout_gravity="center" android:id="@id/cb_general_after" android:background="@drawable/selector_checkbox_setting" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="20.0dip" android:button="@null" android:scaleType="fitCenter" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_lefthanded" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_mouse_left_handed" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <CheckBox android:gravity="center" android:id="@id/cb_general_lefthanded" android:background="@drawable/selector_checkbox_setting" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="20.0dip" android:button="@null" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout> //reversed scroll direction
<RelativeLayout android:orientation="horizontal" android:id="@id/rl_scrolldirection" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_scroll_direction" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <CheckBox android:gravity="center" android:id="@id/cb_general_scrolldirection" android:background="@drawable/selector_checkbox_setting" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="20.0dip" android:button="@null" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_connectiondetect" android:background="#ff202e3e" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_connection_detect" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <CheckBox android:gravity="center" android:id="@id/cb_general_connection" android:background="@drawable/selector_checkbox_setting" android:clickable="false" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="20.0dip" android:button="@null" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>