<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff1c2937" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="3.0dip">
        <ImageView android:layout_gravity="center" android:id="@id/iv_setting_back" android:background="@mipmap/ic_settings_back" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" />
        <TextView android:textSize="22.0sp" android:textColor="#ffa6abb2" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_name" />
    </LinearLayout>
    <View android:background="@mipmap/top_fragment_bg" android:layout_width="fill_parent" android:layout_height="3.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_message" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip">
                <ImageView android:gravity="center" android:id="@id/iv_message" android:background="@mipmap/ic_message_nor" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_message" android:layout_toRightOf="@id/iv_message" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_buy_pro" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_back" android:background="@mipmap/ic_launcher" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="18.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_buy_pro" android:layout_toRightOf="@id/bt_settings_back" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_general" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="20.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_pro" android:background="@mipmap/ic_setting_general" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_General" android:layout_toRightOf="@id/bt_settings_pro" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_restore" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_restore" android:background="@mipmap/ic_setting_restore" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_restore_features" android:layout_toRightOf="@id/bt_settings_restore" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_removeads" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_removeads" android:background="@mipmap/ic_removeads" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_removeads" android:layout_toRightOf="@id/bt_settings_removeads" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_setup" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="20.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_setup" android:background="@mipmap/ic_guide" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_setup" android:layout_toRightOf="@id/bt_settings_setup" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_faq" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_faq" android:background="@mipmap/ic_faq" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/setting_FAQ" android:layout_toRightOf="@id/bt_settings_faq" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/rl_handwriting" android:background="@drawable/selector_setting_bg" android:layout_width="fill_parent" android:layout_height="59.0dip" android:layout_marginTop="1.0dip">
                <ImageView android:gravity="center" android:id="@id/bt_settings_handwriting" android:background="@mipmap/ic_setting_handwriting" android:layout_width="27.0dip" android:layout_height="27.0dip" android:layout_marginLeft="20.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" />
                <TextView android:textSize="19.0sp" android:textColor="#ff79828b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="25.0dip" android:text="@string/hw_handwriting" android:layout_toRightOf="@id/bt_settings_handwriting" android:layout_centerVertical="true" />
                <ImageView android:gravity="center" android:background="@mipmap/ic_settings_enter" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="20.0dip" android:scaleType="fitCenter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <ImageView android:layout_gravity="center" android:background="@mipmap/ic_cute_launcher" android:layout_width="80.0dip" android:layout_height="84.0dip" android:layout_marginTop="50.0dip" />
            <TextView android:textColor="#ff79828b" android:layout_gravity="center" android:id="@id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="40.0dip" android:text="WiFi Mouse v2.4.2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>